--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <script src="less.js" type="text/javascript"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="http://data.reiter.tf/css/bootstrap.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 
     <title>OOOOOOO Such a long link !</title>
@@ -29,7 +28,7 @@
                             <input type="url" class="form-control" id="url" name="url"
                                 placeholder="https://github.com/A3lfyr">
                         </div>
-                        <button type="submit" class="btn btn-dark">Generate</button>
+                        <button type="submit" class="btn btn-primary">Generate</button>
                     </form>
                 </p>
 
@@ -38,7 +37,7 @@
                         <a id="showOooUrl-link" target="_blank"></a>
                     </div>
                     
-                    <button onclick="copy()" class="btn btn-dark">Copy Url</button>
+                    <button onclick="copy()" class="btn btn-primary">Copy Url</button>
                     <button onclick="renew()" class="btn btn-dark">Generate new url</button>
                 </div>
             </div>
