--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Arthur (A3lfyr) REITER">
     <link rel="icon" href="http://data.reiter.tf/img/icon200.png">
 
-    <title>OOOOOOO Such a long link !</title>
+    <title>OOOO Such a long link !</title>
 
     <!-- Bootstrap core CSS & Themes -->
     <link href="http://data.reiter.tf/css/bootstrap.min.css" rel="stylesheet">
@@ -24,7 +24,7 @@
         <!-- Navbar -->
       <header class="masthead mb-auto">
         <div class="inner">
-          <h3 class="masthead-brand">OOOOOOO Such a long link !</h3>
+          <h3 class="masthead-brand">OOOO Such a long link !</h3>
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link" target="_blank" href="https://github.com/A3lfyr/ooooSuchALongLink/"><i class="bi bi-github" style="font-size: 1.1rem"></i> Source Code</a>
             <a class="nav-link" target="_blank" href="https://www.paypal.com/paypalme/ArthurReiter?locale.x=fr_FR"><i class="bi bi-cup-straw" style="font-size: 1.1rem"></i> Buy me a tea</a>
@@ -36,7 +36,7 @@
       <main role="main" class="inner cover">
         <div class="card">
             <div class="card-body">
-                <h1 class="card-title">OOOOOOO Such a long link !</h1>
+                <h1 class="card-title">OOOO Such a long link !</h1>
                 <h6 class="card-subtitle mb-2 text-muted lead"> An URL unShortener with links composed only of circular
                     characters.</h6>
 
