Add a user feedback when clicking on the "Copy Url" button

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
       </form>
       <div id="showOooUrl" style="display: none;">
         <a id="showOooUrl-link" target="_blank"></a><br>
-        <button onclick="copy()">Copy Url</button>
+        <button onclick="copy()" id="btn-copy">Copy Url</button>
         <button onclick="renew()" class="dark">Generate new url</button>
       </div>
     </article>
